--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 "Mental illness is not a choice, but recovery is"
             </div>
             <div class="layer3QuoteFrom">
-                -Baba Gulam Bangali
+                -Plato
             </div>
         </div>
     </div>
