--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
                 </div>
                 <div class="layer4ContactContainer">
-                    <a class="layer4Contact" href="#">
+                    <a class="layer4Contact" href="help.html">
                         Contact!
                     </a>
                 </div>
